front+back+bundle

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,10 @@
 
     <body>
 
+ 
+
+    {# 🔹 Contenu principal #}
+
 
         <!-- Spinner Start -->
         {% block spinner %}
@@ -124,7 +128,20 @@
         
         {% endblock %}
         <!-- Navbar & Hero End -->
+
+        {% for type, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+{% endfor %}
+
                 {% block body %}
+
+
+                
                 {% endblock %}
         <!-- Footer Start -->
         {% block footer %}
